# emergency-video

./: .gitignore  CMakeLists.txt  README.md  acoustic_link.cpp  acoustic_link.h  acoustic_modem.cpp  acoustic_modem.h  audio_io.cpp  audio_io.h  bitstream.cpp  bitstream.h  codec.cpp  codec.h  communicator_protocol.cpp  communicator_protocol.h  crypto.cpp  crypto.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  fallback_controller.cpp  fallback_controller.h  frame.h  main.cpp  media_ffmpeg.cpp  media_ffmpeg.h  metrics.cpp  metrics.h  persistent_store.cpp  persistent_store.h  queue_manager.cpp  queue_manager.h  router.cpp  router.h  transport_manager.cpp  transport_manager.h  util.cpp  util.h  web_main.cpp
.claude/: settings.local.json
.github/workflows/: portable-artifacts.yml
cmake/: FixupPortable.cmake.in
tests/: test_codec.cpp
